<resources>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="about_us">关于我们</string>
    <string name="account_cancel">取消</string>
    <string name="account_confirm">确认</string>
    <string name="account_hint_text">用户名/邮箱/手机(国外手机格式 区号-手机号)</string>
    <string name="account_logout_strg">退出登录</string>
    <string name="account_manage">账号管理</string>
    <string name="account_manage_logout">退出账号 %s...</string>
    <string name="account_special_content">删除当前当前账号将退出登录</string>
    <string name="account_title">删除账号</string>
    <string name="achievement_point">成就点数：</string>
    <string name="achievement_point_rank_list">成就点数排行榜</string>
    <string name="action_modify">modify</string>
    <string name="activity_post_header_title">发帖</string>
    <string name="ad_from_sponsor">由赞助商提供的广告</string>
    <string name="add_black_list_fail">加入黑名单失败</string>
    <string name="add_character">添加角色</string>
    <string name="add_money">增加金钱（100声望合1金币）</string>
    <string name="add_new_account">添加账号</string>
    <string name="add_prestige">增加威望（150声望合1威望）</string>
    <string name="add_to_blacklist">拉黑</string>
    <string name="add_to_elite">加入精华区</string>
    <string name="address">地址</string>
    <string name="advanced">高级</string>
    <string name="advertisement">广告</string>
    <string name="album_view_title">相机胶卷</string>
    <string name="alc_skin_strg">“为了联盟”——争霸艾泽拉斯纪念皮肤</string>
    <string name="amount">数量：</string>
    <string name="app_im_key">23302958</string>
    <string name="app_name">NGA玩家社区</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arena_2v2">2v2</string>
    <string name="arena_3v3">3v3</string>
    <string name="arena_rank_list">竞技场排行榜</string>
    <string name="arena_ranking">竞技场等级：</string>
    <string name="arena_rbg">战场评级：</string>
    <string name="article_detail_from_reply">主题中的回复</string>
    <string name="article_detail_title">主题详情</string>
    <string name="article_manage">主题管理</string>
    <string name="at_dialog_msg">发起了新的对话</string>
    <string name="at_in_reply">主题中提到了你</string>
    <string name="at_in_report">举报了主题</string>
    <string name="at_in_thread">回复中提到了你</string>
    <string name="at_key_strg">触发了关键词监视</string>
    <string name="at_publish_theme">发布的主题</string>
    <string name="athletics_match">竞技比赛</string>
    <string name="attack">攻击</string>
    <string name="attributes">属性</string>
    <string name="audio_permission_might_be_denied">录音权限可能未开启</string>
    <string name="authorize_cancel">授权取消</string>
    <string name="authorize_error">授权错误</string>
    <string name="authorize_success">授权完成</string>
    <string name="avatar">头像</string>
    <string name="average_attack_defense_kill">平均攻防消灭</string>
    <string name="average_attack_defense_time">平均攻防时间</string>
    <string name="average_die">平均死亡</string>
    <string name="average_full_attack_time">平均火力全开时间</string>
    <string name="average_hurt">平均伤害</string>
    <string name="average_individual_kills">平均单独消灭</string>
    <string name="average_kills">平均消灭</string>
    <string name="average_treat">平均治疗</string>
    <string name="azls_strg">争霸艾泽拉斯</string>
    <string name="back">返回</string>
    <string name="base">基础</string>
    <string name="battlefield_rank_list">战场评级排行榜</string>
    <string name="bind_apply">申请认证</string>
    <string name="bind_device">激活账号</string>
    <string name="bind_phone_reason"> ● 应6月1日起正式实施的《中华人民共和国网络安全法》要求及国家互联网信息办公室8月25日公布《互联网跟帖评论服务管理规定》《互联网论坛社区服务管理规定 》要求，NGA将进一步加强论坛账号实名认证，未绑定手机号的账号将无法在NGA正常进行发帖及回复，但仍可浏览帖子。</string>
    <string name="bind_start">开始认证</string>
    <string name="black_complete_strg">完成</string>
    <string name="black_edit_strg">编辑</string>
    <string name="black_list">黑名单</string>
    <string name="black_list_notice_forbid_add_self">你不能拉黑自己</string>
    <string name="black_market">商店</string>
    <string name="black_market_currency">N币</string>
    <string name="black_promot_strg">是否将其移出屏蔽名单?</string>
    <string name="block_ad">不感兴趣</string>
    <string name="bold">加粗</string>
    <string name="book_mark_cancel">取消收藏</string>
    <string name="book_mark_cancel_success">取消收藏成功</string>
    <string name="book_mark_successfully">收藏成功</string>
    <string name="book_mark_top_successfully">收藏版块已置顶</string>
    <string name="boss">Boss</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buyer_name">真实姓名</string>
    <string name="camera">拍照</string>
    <string name="camera_permission_might_be_denied">相机权限可能未开启</string>
    <string name="can_this_item_in_purchased_list">可以在已购商品中查看详情。</string>
    <string name="cancel">取消</string>
    <string name="cancel_collect_confirm_msg">确定取消收藏吗？</string>
    <string name="cancel_short_msg">确定删除消息吗？</string>
    <string name="cancel_success">取消成功</string>
    <string name="cancel_unbind_msg">确定要解除绑定吗？</string>
    <string name="cannot_del_sys_message">系统管理员消息不允许删除</string>
    <string name="cannot_reply_sys_message">系统管理员消息不允许回复</string>
    <string name="cant_enter_into_anonymous_view">不能进入匿名者的主页！</string>
    <string name="cant_enter_into_system_view">不能进入系统管理员的主页！</string>
    <string name="cant_input_more_than_max_number">已经超过最大页数！</string>
    <string name="cant_read_only_anonymous_poster">此楼为匿名回复！</string>
    <string name="certify_guidance">手机号已绑定了其他账号怎么办？</string>
    <string name="change_passwor_title">修改密码</string>
    <string name="change_password_success">修改密码成功，请重新登录</string>
    <string name="character_confirms">确定</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="character_error_hint">角色名称不存在</string>
    <string name="character_name">角色名</string>
    <string name="character_name_couldnt_be_null">角色名不能为空！</string>
    <string name="character_unavailable_hint">该角色很长时间没有活动</string>
    <string name="check_fail_not_installed">Path更新检查失败，本机上未安装老版本</string>
    <string name="check_fail_patch_not_exists">Path更新检查失败，patch文件不存在</string>
    <string name="check_phone_number">验证手机号</string>
    <string name="check_token">token错误</string>
    <string name="check_version">版本更新</string>
    <string name="china_mobile">移动</string>
    <string name="china_telecom">电信</string>
    <string name="china_unicom">联通</string>
    <string name="choose_server">选择服务器</string>
    <string name="choose_the_broad">发布在哪个版块</string>
    <string name="clan_skin_strg">“为了部落”——争霸艾泽拉斯纪念皮肤</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_successful">清除成功！</string>
    <string name="clear_drafts">清除草稿</string>
    <string name="click_login">点击登录/注册</string>
    <string name="click_star_to_rank">点击或滑动星星评分</string>
    <string name="click_to_skip">点击跳过 5</string>
    <string name="close">关闭</string>
    <string name="columns_list">栏目</string>
    <string name="comment_on_reply">评论了你的回复</string>
    <string name="comment_on_thread">评论了你的主题</string>
    <string name="common_post_success">发贴完毕 ...</string>
    <string name="confirm">确认</string>
    <string name="confirm_address">确认收件地址</string>
    <string name="continue_day_strg">连续刮墙 %1$s 天</string>
    <string name="copied_code_successful">已经复制</string>
    <string name="copied_link_successful">链接已经复制：</string>
    <string name="copper_currency">铜币</string>
    <string name="copy_network_info_success">网络诊断信息已复制到剪贴板</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="couldnt_change_subscribe_status">此为默认版块，不可订阅或取消订阅该版块！</string>
    <string name="couldnt_record_video_due_to_denied_certain_permission">未获取%s权限，无法录制视频。请在权限设置中打开权限。</string>
    <string name="couldnt_support_record_video">不支持短视频录制</string>
    <string name="current_locations">当前位置</string>
    <string name="current_password">当前密码</string>
    <string name="current_password_hint">当前密码（输入当前密码）</string>
    <string name="current_version_is_latest">当前已经是最新版了哦</string>
    <string name="decrease_prestige">扣减威望（150声望合1威望）</string>
    <string name="defence">防御</string>
    <string name="delete">删除</string>
    <string name="delete_article">删帖</string>
    <string name="delete_character">删除角色</string>
    <string name="delete_item">删除记录</string>
    <string name="delete_success">删除成功</string>
    <string name="deliver_id">单号</string>
    <string name="deliver_name">公司</string>
    <string name="detail_address">详细地址</string>
    <string name="detail_info">详细信息</string>
    <string name="device_info_result">设备型号：%s</string>
    <string name="device_version_result">Android版本：%s</string>
    <string name="diagnose_start">开始诊断</string>
    <string name="diagnosing">诊断中</string>
    <string name="did_not_search_yet">还没开始搜索！</string>
    <string name="die_times">死亡数</string>
    <string name="dif_password_hint">新密码两次输入不一致</string>
    <string name="district">所在地区(国家，省，市)</string>
    <string name="domain_empty_hint">您还没有选择域名</string>
    <string name="download_avatar_nowifi">移动网络下显示用户头像</string>
    <string name="downloading_gift">下载礼物...</string>
    <string name="draft_clear">草稿箱已清空</string>
    <string name="edit_receiver_address">填写收件地址</string>
    <string name="game_date_title">发售时间</string>
    <string name="game_platform_title">游戏平台</string>
    <string name="game_type_title">游戏类型</string>
    <string name="home_menu_divider">数据</string>
    <string name="home_menu_rank">评分</string>
    <string name="home_menu_scanning">扫码</string>
    <string name="home_menu_setting">设置</string>
    <string name="home_menu_tasks">任务</string>
    <string name="nga_forum">论坛</string>
    <string name="user_center_nearby">组队</string>
</resources>