<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/real_parent_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/entrance_layout"
        android:layout_width="fill_parent"
        android:layout_height="90.0dip"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/wow_item"
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="60.0dip"
            android:src="@drawable/mine_wow" />

        <ImageView
            android:id="@+id/csgo_item"
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:layout_alignTop="@id/wow_item"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60.0dip"
            android:src="@drawable/mine_csgo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/divider_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/entrance_layout"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip">

        <TextView
            android:id="@+id/menu_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="21.0dip"
            android:layout_marginRight="21.0dip"
            android:gravity="center"
            android:text="@string/home_menu_divider"
            android:textColor="@color/color_link_and_icon"
            android:textSize="11.0sp" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/menu_divider"
            android:background="@color/color_home_menu_divider" />

        <View
            android:id="@+id/divider_2"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/menu_divider"
            android:background="@color/color_home_menu_divider" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/divider_layout"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <!--此处应使用circleView-->
                <!--<gov.pianzong.androidnga.view.CircleImageView-->
                <!--android:id="@id/person_icon"-->
                <!--android:layout_width="80.0dip"-->
                <!--android:layout_height="80.0dip"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_marginLeft="25.0dip"-->
                <!--android:layout_marginTop="30.0dip"-->
                <!--android:clickable="false"-->
                <!--android:contentDescription="@string/avatar"-->
                <!--android:longClickable="false"-->
                <!--android:src="@drawable/default_icon" />-->

                <ImageView
                    android:id="@+id/person_icon"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="25.0dip"
                    android:layout_marginTop="30.0dip"
                    android:clickable="false"
                    android:contentDescription="@string/avatar"
                    android:longClickable="false"
                    android:src="@drawable/default_icon" />

                <TextView
                    android:id="@+id/user_bind"
                    android:layout_width="70.0dip"
                    android:layout_height="23.0dip"
                    android:layout_alignLeft="@id/person_icon"
                    android:layout_alignBottom="@id/person_icon"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginBottom="1.0dip"
                    android:background="@drawable/shape_activity_account"
                    android:gravity="center"
                    android:text="@string/bind_device"
                    android:textColor="@color/color_ffffff"
                    android:textSize="12.0sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_marginTop="47.0dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_toRightOf="@id/person_icon"
                    android:textColor="@color/color_primary_text"
                    android:textSize="20.0sp" />

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name"
                    android:layout_alignLeft="@id/user_name"
                    android:layout_marginTop="4.0dip"
                    android:textColor="@color/color_secondary_text"
                    android:textSize="12.0sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/menu_user_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_marginBottom="20.0dip"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0">

                    <ImageView
                        android:id="@+id/icon_message"
                        android:layout_width="36.0dip"
                        android:layout_height="36.0dip"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/home_menu_bg"
                        android:scaleType="center"
                        android:src="@drawable/home_menu_message" />

                    <TextView
                        android:id="@+id/receive_message"
                        android:layout_width="9.0dip"
                        android:layout_height="9.0dip"
                        android:layout_alignRight="@id/icon_message"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/shape_red_dot"
                        android:gravity="center"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0">

                    <ImageView
                        android:id="@+id/icon_msg"
                        android:layout_width="36.0dip"
                        android:layout_height="36.0dip"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/home_menu_bg"
                        android:scaleType="center"
                        android:src="@drawable/home_menu_im" />

                    <TextView
                        android:id="@+id/text_im_msg"
                        android:layout_width="9.0dip"
                        android:layout_height="9.0dip"
                        android:layout_alignRight="@id/icon_msg"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/shape_red_dot"
                        android:gravity="center"
                        android:visibility="gone" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/icon_nightmode"
                        android:layout_width="36.0dip"
                        android:layout_height="36.0dip"
                        android:background="@drawable/home_menu_bg"
                        android:scaleType="center"
                        android:src="@drawable/mine_nightmode" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/divider_3"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_marginBottom="5.0dip"
                android:background="@color/color_home_menu_divider" />

            <TextView
                android:id="@+id/nga_item"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:drawableLeft="@drawable/home_menu_forum"
                android:drawablePadding="37.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="25.0dip"
                android:text="@string/nga_forum"
                android:textColor="@color/color_primary_text"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/grade_item"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:drawableLeft="@drawable/home_menu_grade"
                android:drawablePadding="37.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="25.0dip"
                android:text="@string/home_menu_rank"
                android:textColor="@color/color_primary_text"
                android:textSize="15.0sp" />

            <LinearLayout
                android:id="@+id/sign_layout"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25.0dip">

                <TextView
                    android:id="@+id/sign_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/mine_task"
                    android:drawablePadding="37.0dip"
                    android:gravity="center"
                    android:text="@string/home_menu_tasks"
                    android:textColor="@color/color_primary_text"
                    android:textSize="15.0sp" />

                <ImageView
                    android:id="@+id/text_sign_icon"
                    android:layout_width="4.0dip"
                    android:layout_height="4.0dip"
                    android:layout_marginBottom="11.0dip"
                    android:background="@drawable/shape_red_dot"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/black_market"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:drawableLeft="@drawable/mine_shop"
                android:drawablePadding="37.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="25.0dip"
                android:text="@string/black_market"
                android:textColor="@color/color_primary_text"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/nearby_item"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:drawableLeft="@drawable/mine_nearby"
                android:drawablePadding="37.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="25.0dip"
                android:text="@string/user_center_nearby"
                android:textColor="@color/color_primary_text"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/scan_item"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:drawableLeft="@drawable/home_menu_scan"
                android:drawablePadding="37.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="25.0dip"
                android:text="@string/home_menu_scanning"
                android:textColor="@color/color_primary_text"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/settings_item"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:background="@drawable/home_menu_item_bg"
                android:drawableLeft="@drawable/mine_setting"
                android:drawablePadding="37.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="25.0dip"
                android:text="@string/home_menu_setting"
                android:textColor="@color/color_primary_text"
                android:textSize="15.0sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>