<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:tag="layout/custom_spinner_layout_0">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_main_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <TextView
                android:id="@+id/platform_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/triangle_selector"
                android:drawablePadding="7.0dip"
                android:padding="5.0dip"
                android:text="@string/game_platform_title"
                android:textColor="@color/color_rank_filter"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <TextView
                android:id="@+id/gametype_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/triangle_selector"
                android:drawablePadding="7.0dip"
                android:padding="5.0dip"
                android:text="@string/game_type_title"
                android:textColor="@color/color_rank_filter"
                android:textSize="16.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <TextView
                android:id="@+id/saletime_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/triangle_selector"
                android:drawablePadding="7.0dip"
                android:padding="5.0dip"
                android:text="@string/game_date_title"
                android:textColor="@color/color_rank_filter"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/close_dialog_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/filter_layout"
        android:background="@color/color_85000000"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/filter_content_parent_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filter_layout">

        <LinearLayout
            android:id="@+id/filter_content_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="158.0dip"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/filter_content_detail"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="@color/color_secondary_background"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/close_filter"
                android:layout_width="fill_parent"
                android:layout_height="17.0dip"
                android:background="@color/color_titlebar_background"
                android:scaleType="center"
                android:src="@drawable/arrow_up" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>